src/geometry/shape/sphere/snapshots/kasane_logic__geometry__shape__sphere__tests__cover_single_ids__medium_sphere_radius_100m_at_z18.snap
---
source: src/geometry/shape/sphere/tests.rs
expression: "sorted_ids(&sphere, 18)"
---
[
    "18/-1/232845/103225",
    "18/-1/232845/103226",
    "18/-1/232845/103227",
    "18/-1/232846/103225",
    "18/-1/232846/103226",
    "18/-1/232846/103227",
    "18/-1/232847/103225",
    "18/-1/232847/103226",
    "18/-1/232847/103227",
    "18/0/232845/103225",
    "18/0/232845/103226",
    "18/0/232845/103227",
    "18/0/232846/103225",
    "18/0/232846/103226",
    "18/0/232846/103227",
    "18/0/232846/103228",
    "18/0/232847/103225",
    "18/0/232847/103226",
    "18/0/232847/103227",
    "18/1/232845/103226",
    "18/1/232845/103227",
    "18/1/232846/103225",
    "18/1/232846/103226",
    "18/1/232846/103227",
    "18/1/232847/103226",
    "18/1/232847/103227",
]
