src/geometry/shape/sphere/snapshots/kasane_logic__geometry__shape__sphere__tests__cover_single_ids__sphere_at_ground_level_at_z20.snap
---
source: src/geometry/shape/sphere/tests.rs
expression: "sorted_ids(&sphere, 20)"
---
[
    "20/-1/931384/412906",
    "20/-1/931384/412907",
    "20/-1/931385/412905",
    "20/-1/931385/412906",
    "20/-1/931385/412907",
    "20/-1/931385/412908",
    "20/-1/931386/412905",
    "20/-1/931386/412906",
    "20/-1/931386/412907",
    "20/-1/931386/412908",
    "20/-1/931387/412906",
    "20/-1/931387/412907",
    "20/-2/931385/412906",
    "20/-2/931385/412907",
    "20/-2/931386/412906",
    "20/-2/931386/412907",
    "20/0/931384/412906",
    "20/0/931384/412907",
    "20/0/931385/412905",
    "20/0/931385/412906",
    "20/0/931385/412907",
    "20/0/931385/412908",
    "20/0/931386/412905",
    "20/0/931386/412906",
    "20/0/931386/412907",
    "20/0/931386/412908",
    "20/0/931387/412906",
    "20/0/931387/412907",
    "20/1/931385/412906",
    "20/1/931385/412907",
    "20/1/931386/412906",
    "20/1/931386/412907",
]
